--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.navlog{
+  color: black;
+}
+.navbarbg{
+  background-color: #24252a;
+  
+}
+.nav-link {
+  border-radius: 10px;
+  color: blueviolet;
+   margin:5px 5px
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link.active{
+  color: white !important;
+  background-color: blueviolet !important;
+  border-radius: 20px !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (maxWidth:813px) {
+  
+  
 }
